# aRibeiroTests

./: CMakeLists.txt  README.md  pull-submodules.sh
cmake/: 01_tools.cmake  include.cmake
cmake-modules/: FindaRibeiroCore.cmake  FindaRibeiroData.cmake  FindaRibeiroPlatform.cmake
cmake/libs/: aRibeiroWrappers.cmake  libaRibeiroCore.cmake  libaRibeiroData.cmake  libaRibeiroPlatform.cmake  libjpeg.cmake  libpng.cmake  librandom.cmake  libzlib.cmake
src/benchmark-sort/: CMakeLists.txt  main.cpp
src/debug-console/: CMakeLists.txt  main.cpp
src/test-core/: CMakeLists.txt  main.cpp
src/test-inplace-sort/: CMakeLists.txt  main.cpp
src/test-ipc/: CMakeLists.txt  main.cpp
src/test-onabort-fnc/: CMakeLists.txt  main.cpp
src/test-parallel-sort/: CMakeLists.txt  additional_algorithms.h  main.cpp
src/test-process/: CMakeLists.txt  main.cpp  tst.bat
src/test-queue/: CMakeLists.txt  main.cpp
src/test-socket-tcp/: CMakeLists.txt  main.cpp
src/test-socket-udp/: CMakeLists.txt  main.cpp
src/test-thread/: CMakeLists.txt  main.cpp
